migrated to windows bash

--- a/teos/.vscode/settings.json
+++ b/teos/.vscode/settings.json
@@ -47,6 +47,8 @@
     "*.ipp": "cpp",
     "xstring": "cpp",
     "vector": "cpp",
-    "ostream": "cpp"
+    "ostream": "cpp",
+    "xtree": "cpp",
+    "xutility": "cpp"
   }
 }
