--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
         "type": "cppdbg",
         "request": "launch",
         "program": "/mnt/e/Workspaces/EOS/logos/teos/build/teos",
-        "args": ["set", "contract", "eosio", "eosio.bios", "-p", "eosio@active"],
+        "args": ["set", "contract", "eosio", "eosio.bios", "-p", "eosio"],
         "stopAtEntry": false,
         "cwd": "/mnt/e/Workspaces/EOS/logos/teos/build",
         "environment": [],
@@ -133,7 +133,7 @@
         "type": "cppdbg",
         "request": "launch",
         "program": "/mnt/e/Workspaces/EOS/logos/teos/build/teos",
-        "args": ["create", "account", "eosio", "currency", "EOS8XTEZDTGCVvzo2YZDU7rVQbaBWZEV55KTxFqeK3tbM798svn7X", "EOS8bSnzJjeqWB76h2WoEn9HFBWRFGWfhqzfM6GjkwavtLTqEr5m2"],
+        "args": ["create", "account", "eosio", "currency", "EOS6piC619kadGT5wgp5YPHPkq6NyCrEGRqmTFx18HpEL4u5xShz5", "EOS7nsJFovJjQFsJKAytVPC1HDYCfHVrhUCp39KTWjPQ8mAjsHLXe"],
         "stopAtEntry": false,
         "cwd": "/mnt/e/Workspaces/EOS/logos/teos/build",
         "environment": [],
