--- a/contracts/hello/.vscode/settings.json
+++ b/contracts/hello/.vscode/settings.json
@@ -3,5 +3,6 @@
       "functional": "cpp",
       "__config": "cpp",
       "*.ipp": "cpp"
-   }
+},
+"C_Cpp.intelliSenseEngineFallback": "Enabled"
 }
