--- a/teos/config.json.in
+++ b/teos/config.json.in
@@ -1,6 +1,6 @@
 {
   "EOSIO_SOURCE_DIR":"@EOSIO_SOURCE_DIR@",
-  "LOGOS_DIR":"@LOGOS_DIR@",
+  "EOS_FACTORY_DIR":"@EOS_FACTORY_DIR@",
   "DAEMON_NAME":"nodeos",
   "WASM_CLANG":"@WASM_CLANG@",
   "WASM_LLVM_LINK":"@WASM_LLVM_LINK@",
