--- a/teos_lib/CMakeLists.txt
+++ b/teos_lib/CMakeLists.txt
@@ -7,7 +7,7 @@ set( VERSION_MINOR 0 )
 set( CMAKE_BUILD_TYPE "Debug" )
 
 
-set( LOGOS_DIR "NOT DEFINED !!" )
+set( EOS_FACTORY_DIR "NOT DEFINED !!" )
 set( EOSIO_SOURCE_DIR "NOT DEFINED !!" )
 set( EOSIO_BINARY_DIR "NOT DEFINED !!" )
 
@@ -15,10 +15,11 @@ set( CMAKE_INSTALL_PREFIX "NOT DEFINED !!" )
 set( CMAKE_INSTALL_LIB "NOT DEFINED !!" )
 set( CMAKE_INSTALL_LIB_PREFIX "NOT DEFINED !!" )
 
-list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/CMakeModules")
+message(STATUS "APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/../CMakeModules")
+list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/../CMakeModules")
 
 # 'common.cmake' sets Lgos common values:
-# LOGOS_DIR, EOSIO_SOURCE_DIR. EOSIO_BINARY_DIR, 
+# EOS_FACTORY_DIR, EOSIO_SOURCE_DIR. EOSIO_BINARY_DIR, 
 # CMAKE_INSTALL_PREFIX, 
 # CMAKE_CXX_STANDARD, CMAKE_BUILD_TYPE, 
 include( ../common.cmake ) 
