--- a/teos_lib/CMakeLists.txt
+++ b/teos_lib/CMakeLists.txt
@@ -7,7 +7,7 @@ set( VERSION_MINOR 0 )
 set( CMAKE_BUILD_TYPE "Debug" )
 
 
-set( EOS_FACTORY_DIR "NOT DEFINED !!" )
+set( CONTEXT_DIR "NOT DEFINED !!" )
 set( EOSIO_SOURCE_DIR "NOT DEFINED !!" )
 set( EOSIO_BINARY_DIR "NOT DEFINED !!" )
 
@@ -19,7 +19,7 @@ message(STATUS "APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/../CMakeMod
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/../CMakeModules")
 
 # 'common.cmake' sets Lgos common values:
-# EOS_FACTORY_DIR, EOSIO_SOURCE_DIR. EOSIO_BINARY_DIR, 
+# CONTEXT_DIR, EOSIO_SOURCE_DIR. EOSIO_BINARY_DIR, 
 # CMAKE_INSTALL_PREFIX, 
 # CMAKE_CXX_STANDARD, CMAKE_BUILD_TYPE, 
 include( ../common.cmake ) 
