env variables normalized

--- a/teos/config.json.in
+++ b/teos/config.json.in
@@ -1,9 +1,9 @@
 {
   "EOSIO_SOURCE_DIR":"@EOSIO_SOURCE_DIR@",
-  "CONTEXT_DIR":"@CONTEXT_DIR@",
-  "DAEMON_NAME":"nodeos",
-  "WASM_CLANG":"@WASM_CLANG@",
-  "WASM_LLVM_LINK":"@WASM_LLVM_LINK@",
-  "WASM_LLC":"@WASM_LLC@",
-  "BINARYEN_BIN":"@BINARYEN_BIN@"
+  "EOSIO_CONTEXT_DIR":"@EOSIO_CONTEXT_DIR@",
+  "EOSIO_DAEMON_NAME":"nodeos",
+  "EOSIO_WASM_CLANG":"@EOSIO_WASM_CLANG@",
+  "EOSIO_WASM_LLVM_LINK":"@EOSIO_WASM_LLVM_LINK@",
+  "EOSIO_WASM_LLC":"@EOSIO_WASM_LLC@",
+  "EOSIO_BINARYEN_BIN":"@EOSIO_BINARYEN_BIN@"
 }
