--- a/teos/include/teos/config.json
+++ b/teos/include/teos/config.json
@@ -1,8 +1,8 @@
 {
-  "DAEMON_NAME":"nodeos",
-  "WASM_CLANG":"/opt/wasm/bin/clang",
-  "WASM_LLVM_LINK":"/opt/wasm/bin/llvm-link",
-  "WASM_LLC":"/opt/wasm/bin/llc",
-  "BINARYEN_BIN":"/usr/local/binaryen/bin/",
+  "EOSIO_DAEMON_NAME":"nodeos",
+  "EOSIO_WASM_CLANG":"/opt/wasm/bin/clang",
+  "EOSIO_WASM_LLVM_LINK":"/opt/wasm/bin/llvm-link",
+  "EOSIO_WASM_LLC":"/opt/wasm/bin/llc",
+  "EOSIO_BINARYEN_BIN":"/usr/local/binaryen/bin/",
   "genesis-json":"geneis.json"
 }
